fix: address issue #150 review findings